<resources>
    <string name="app_name">Watchman Hymnbook</string>

    <string name="action_settings">Settings</string>

    <string name="search_title">Search Hymns</string>
    <string name="search_hint">Search Hymns</string>
    <string name="about">About</string>

    <string name="tunes_copied_success">Tunes copied successfully</string>

    <string name="text_home_label">Home</string>
    <string name="text_topics_label">Topics</string>
    <string name="text_playlist_label">Playlists</string>
    <string name="text_search_label">Search</string>
    <string name="label_hymns">Hymns</string>
    <string name="hymn_category_image_description">Hymn Category Image</string>
    <string name="children_category_image_description">Children Category Image</string>
    <string name="text_hint_filter_hymns">Filter Hymns</string>

    <string name="hymn_no_temp">Hymn, %1$d</string>
    <string name="label_sort_by_number">Sort by number</string>
    <string name="label_sort_by_title">Sort by title</string>
    <string name="title_more">More</string>
    <string name="text_hymn_of_the_day">Hymn of the day</string>
    <string name="text_share">Share</string>
    <string name="label_sheet_music">Sheet Music</string>
    <string name="file_path_catalogs" translatable="false">catalogs/</string>
    <string name="file_path_midi">midi</string>
    <string name="file_path_downloads">downloads</string>
    <string name="description_bottom_sheet_drag_button">Bottom sheet drag button</string>
    <string name="file_path_artifacts">artifacts/</string>
    <string name="file_path_midi_archive">hymns.zip</string>
    <string name="notification_play">Play</string>
    <string name="notification_pause">Pause</string>
    <string name="notification_channel">Now Playing</string>
    <string name="notification_channel_description">Shows what tune is playing in Hymnbook app</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="playback_speed">%f\u00D7</string>
    <string name="play_pause_description">Play Pause</string>
    <string name="repeat_toggle_description">Repeat toggle</string>
    <string name="previous_icon_description">Previous</string>
    <string name="next_icon_description">Next</string>
    <string name="a_big_text">A</string>
    <string name="a_small_text">A</string>
    <string name="tempo_1x">1.0×</string>
    <string name="tempo_x">%1$.1f×</string>
    <string name="change_speed_text">Tempo: change playback speed</string>
    <string name="tempo_05">0.5×</string>
    <string name="tempo_15">1.5×</string>
    <string name="tempo_10">1.0×</string>
    <string name="new_playlist_text">New playlist</string>
    <string name="add_new_playlist">Add new playlist</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="title_text">Title</string>
    <string name="description_text">Description</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="hint_playlist_title">Playlist name</string>
    <string name="hint_playlist_description">Description</string>
    <string name="save">Save</string>
    <string name="success_adding_to_playlist">Hymn added successfully to playlist!</string>
    <string name="error_hymn_already_exist">Hymn Already exist in playlist</string>
    <string name="success_creating_playlist">Playlist Saved!</string>
    <string name="error_playlist_already_exist">Playlist with same name exists</string>
    <string name="delete">Delete</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="options_menu_button_description">Options menu button</string>
    <string name="playlist_deleted">Playlist Deleted</string>
    <string name="error_deleting_playlist">Error deleting playlist!</string>
    <string name="no_playlist_explanation">You have not created any playlist yet. You can create one by clicking on the icon on the toolbar</string>
    <string name="rename">Rename</string>
    <string name="edit_playlist">Edit playlist</string>
    <string name="hymnbook_title">Hymnbook App</string>

    <string name="about_text">The Watchman Hymnbook is a collection of 300 selected Hymns and Songs for Christian Fellowship as found in the Hymnal of The Watchman Catholic Charismatic Renewal Movement. The Hymnbook app contains above 250 midi tunes which will help anyone sing along easily.</string>
    <string name="about_wccrm">A Christian Organisation divinely raised to be a channel of blessings to all peoples of the world, who are seeking God sincerely and who will come in contact with her.</string>
    <string name="open_source_licenses">Open Source Licenses</string>

    <string name="app_version">Version %s</string>
    <string name="wccrm_name">Watchman Catholic Charismatic Renewal Movement</string>
    <string name="theming">Theming</string>
    <string name="share_hymn">Share Hymn</string>
    <string name="about_app">The Watchman Hymnbook provides a collection of 300 select Hymns and Songs for Christian Fellowship. The Hymnbook app contains above 250 midi tunes which will help anyone sing along easily.</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="share_app">Share Hymnbook App</string>

    <string name="play_store_scheme" translatable="false">market://details?id=%s</string>
    <string name="play_store_web" translatable="false">https://play.google.com/store/apps/details?id=%s</string>
    <string name="wccrm_facebook_link" translatable="false">https://www.facebook.com/vowtv/</string>
    <string name="wccrm_twitter_link" translatable="false">https://twitter.com/vowtelevision</string>
    <string name="wccrm_youtube_link" translatable="false">https://www.youtube.com/channel/UCEtzFBHftX7zDaWqYTHqc-A</string>
    <string name="visit_us_on_facebook">Visit us on Facebook</string>
    <string name="follow_us_on_twitter">Follow us on Twitter</string>
    <string name="catch_up_on_youtube">Subscribe to our Youtube Channel</string>
    <string name="fb_page_template" translatable="false">fb://page/%s</string>
    <string name="wccrm_vowtv_fb_id" translatable="false">1725164007769664</string>
    <string name="facebook_package_name" translatable="false">com.facebook.katana</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>

    <string name="link_privacy_policy">https://techbeloved.github.io/hymnbook/privacy_policy.html</string>
    <string name="link_terms_and_conditions">https://techbeloved.github.io/hymnbook/terms_and_conditions.html</string>
    <string name="acknowledgement">Acknowledgement</string>
    <string name="aknowledgement_explanation">I hereby acknowledge the following whose invaluable resources made this app possible in the first place.</string>
    <string name="hymnary_tagline">a comprehensive index of hymns and hymnals</string>
    <string name="www_hymntime_com">www.hymntime.com</string>
    <string name="cyberhymnal_logo_description">Cyberhymnal logo</string>
    <string name="hymnary_logo_description">Hymnary Logo</string>
    <string name="timelesstruths">Timeless Truths - free online library\nlibrary.timelesstruths.org/music</string>

    <string name="link_timelesstruths">https://library.timelesstruths.org/music/</string>
    <string name="link_cyberhymnal">http://www.hymntime.com/tch/index.htm</string>
    <string name="link_hymnary">https://hymnary.org/</string>

    <!-- Preference keys   -->
    <string name="pref_key_first_start" translatable="false">first_start</string>
    <string name="pref_key_saved_midi_version" translatable="false">saved_midi_version</string>
    <string name="pref_key_playback_rate" translatable="false">key_playback_rate</string>
    <string name="pref_key_repeat_mode" translatable="false">key_repeat_mode</string>
    <string name="pref_key_prefer_sheet_music" translatable="false">prefer_sheet_music_display</string>
    <string name="pref_key_sort_by" translatable="false">filter_by</string>
    <string name="pref_key_enable_night_mode" translatable="false">night_mode_switch_updated</string>
    <string name="pref_key_category_app_theme" translatable="false">pref_category_app_theme</string>
    <string name="pref_key_detail_font_size" translatable="false">detail_font_size</string>
    <string name="pref_key_current_download_id" translatable="false">download_id</string>
    <string name="pref_key_hymn_catalog_ready" translatable="false">hymn_catalog_ready</string>
    <string name="pref_key_hymn_midi_files_ready" translatable="false">hymn_midi_files_ready</string>
    <string name="pref_key_hymn_catalog_download_status" translatable="false">hymn_catalog_download_status</string>
    <string name="pref_key_hymn_catalog_download_id" translatable="false">hymn_catalog_download_id</string>
    <string name="sheet_music_discovery">Looking for sheet music? Tap here</string>

    <string-array name="tempo_values">
        <item>0.5×</item>
        <item>0.7×</item>
        <item>0.9×</item>
        <item>1.0×</item>
        <item>1.1×</item>
        <item>1.3×</item>
        <item>1.5×</item>
    </string-array>

    <!--  These must correspond with NightMode enum  -->
    <string-array name="prefs_night_mode">
        <item>On</item>
        <item>Off</item>
        <item>System</item>
    </string-array>
</resources>
