<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/text_home_label"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/topicsFragment"
        android:enabled="true"
        android:title="@string/text_topics_label"
        android:icon="@drawable/ic_topics"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/playlistsFragment"
        android:enabled="true"
        android:title="@string/text_playlist_label"
        android:icon="@drawable/ic_queue_music_black_24dp"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/searchFragment"
        android:enabled="true"
        android:title="@string/text_search_label"
        android:icon="@drawable/ic_search_new"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/moreFragment"
        android:title="@string/title_more"
        android:icon="@drawable/ic_more"
        app:showAsAction="ifRoom"/>

</menu>