<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/textview_addedit_playlist_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Hymnbook.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/new_playlist_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_addedit_playlist_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinputlayout_addedit_playlist_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinputedittext_playlist_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_cancel"
            style="@style/Widget.Hymnbook.Button.Unelevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_text"
            app:layout_constraintEnd_toStartOf="@+id/button_accept"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_accept" />

        <Button
            android:id="@+id/button_accept"
            style="@style/Widget.Hymnbook.Button.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ok_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_cancel"
            app:layout_constraintTop_toBottomOf="@+id/textinputlayout_addedit_playlist_description" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_addedit_playlist_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_addedit_playlist_header">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinputedittext_playlist_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_text" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>