<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/scene_add_to_playlist_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_create_new_playlist_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/create_new_playlist"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_create_new_playlist_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            app:boxCornerRadiusTopEnd="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_create_new_playlist_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_playlist_title"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_create_new_playlist_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            app:boxCornerRadiusTopEnd="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_create_new_playlist_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_playlist_description"
                android:inputType="text"
                android:maxLength="100"
                android:maxLines="2" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_create_new_playlist_save"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:enabled="false"
            android:text="@string/save"
            android:textAllCaps="false"
            app:cornerRadius="16dp" />
    </LinearLayout>
</layout>