<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout_about"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_fragment_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_fragment_about"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:title="About" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollview_about"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="?actionBarSize"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:id="@+id/linearlayout_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_about_app_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_standard_layout"
                    android:layout_marginTop="64dp"
                    android:layout_marginRight="@dimen/margin_standard_layout"
                    android:gravity="center"
                    android:text="@string/hymnbook_title"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="#A0A0A0" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_standard_layout"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="@dimen/margin_standard_layout"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/about_text"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:textSize="12sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    android:background="#EEEEEE" />

                <TextView
                    android:id="@+id/textview_about_wccrm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_standard_layout"
                    android:layout_marginRight="@dimen/margin_standard_layout"
                    android:gravity="center"
                    android:text="@string/wccrm_name"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="#A0A0A0" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_standard_layout"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="@dimen/margin_standard_layout"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/about_wccrm"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:textSize="12sp" />


                <TextView
                    android:id="@+id/textview_about_social_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="?listPreferredItemHeightSmall"
                    android:layout_marginTop="24dp"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:drawablePadding="8dp"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/margin_standard_layout"
                    android:paddingRight="@dimen/margin_standard_layout"
                    android:text="@string/visit_us_on_facebook"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    app:drawableLeftCompat="@drawable/f_logo"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/textview_about_social_twitter"
                    android:layout_width="match_parent"
                    android:layout_height="?listPreferredItemHeightSmall"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:drawablePadding="8dp"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/margin_standard_layout"
                    android:paddingRight="@dimen/margin_standard_layout"
                    android:text="@string/follow_us_on_twitter"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    app:drawableLeftCompat="@drawable/ic_twitter_logo"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/textview_about_social_youtube"
                    android:layout_width="match_parent"
                    android:layout_height="?listPreferredItemHeightSmall"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:drawablePadding="8dp"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/margin_standard_layout"
                    android:paddingRight="@dimen/margin_standard_layout"
                    android:text="@string/catch_up_on_youtube"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    app:drawableLeftCompat="@drawable/youtube"
                    tools:visibility="visible" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="#EEEEEE"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/textview_about_open_source_licenses"
                    android:layout_width="match_parent"
                    android:layout_height="?listPreferredItemHeightSmall"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/margin_standard_layout"
                    android:paddingRight="@dimen/margin_standard_layout"
                    android:text="@string/open_source_licenses"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                <TextView
                    android:id="@+id/textview_about_privacy_policy"
                    android:layout_width="match_parent"
                    android:layout_height="?listPreferredItemHeightSmall"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/margin_standard_layout"
                    android:paddingRight="@dimen/margin_standard_layout"
                    android:text="@string/privacy_policy"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                <TextView
                    android:id="@+id/textview_about_terms_and_conditions"
                    android:layout_width="match_parent"
                    android:layout_height="?listPreferredItemHeightSmall"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/margin_standard_layout"
                    android:paddingRight="@dimen/margin_standard_layout"
                    android:text="@string/terms_and_conditions"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                <TextView
                    android:id="@+id/textview_about_aknowledgement"
                    android:layout_width="match_parent"
                    android:layout_height="?listPreferredItemHeightSmall"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/margin_standard_layout"
                    android:paddingRight="@dimen/margin_standard_layout"
                    android:text="@string/acknowledgement"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />


                <TextView
                    android:id="@+id/textview_about_version"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_standard_layout"
                    android:layout_marginTop="@dimen/margin_standard_layout"
                    android:layout_marginRight="@dimen/margin_standard_layout"
                    android:layout_marginBottom="@dimen/margin_standard_layout"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:textColor="#A0A0A0"
                    android:textSize="12sp"
                    tools:text="Version 2.0.0" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>