<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout_tempo_selector"
        android:layout_width="match_parent"
        android:layout_height="104dp">

        <SeekBar
            android:id="@+id/seekBar_tempo_selector"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:max="10"
            android:progress="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50121653" />

        <TextView
            android:id="@+id/textView_tempo_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/tempo_10"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/seekBar_tempo_selector" />

        <TextView
            android:id="@+id/textView_tempo_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempo_15"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/seekBar_tempo_selector"
            app:layout_constraintTop_toBottomOf="@+id/seekBar_tempo_selector" />

        <TextView
            android:id="@+id/textView_tempo_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempo_05"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/seekBar_tempo_selector"
            app:layout_constraintTop_toBottomOf="@+id/seekBar_tempo_selector" />

        <TextView
            android:id="@+id/textView_tempo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_speed_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/seekBar_tempo_selector"
            app:layout_constraintEnd_toEndOf="@+id/seekBar_tempo_selector"
            app:layout_constraintStart_toStartOf="@+id/seekBar_tempo_selector"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>